--- a/projects/my-python-app/BUILD.bazel
+++ b/projects/my-python-app/BUILD.bazel
@@ -1,7 +1,4 @@
-load("@python_deps//:requirements.bzl", "requirement") # "python_deps" matches definition in WORKSPACE.bazels
-
-
-load("@rules_python//python:defs.bzl", "py_binary")
+load("@python_deps//:requirements.bzl", "requirement") # "python_deps" matches definition in WORKSPACE.bazel
 
 py_binary(
     name = "main",
