Reorganized repo structure, used bazel run //:gazelle to test auto-generation of go targets

--- a/bazel-mystery/crime_scene_reports/BUILD
+++ b/bazel-mystery/crime_scene_reports/BUILD
@@ -4,15 +4,15 @@
 # For full license text, see the LICENSE file in the repo root or https://opensource.org/licenses/BSD-3-Clause
 
 genrule(
-  name = "car_accident_275573",
-  outs = ["car_accident_275573.txt"],
-  cmd_bash = "echo hello world && echo hello world! >$@"
+    name = "car_accident_275573",
+    outs = ["car_accident_275573.txt"],
+    cmd_bash = "echo hello world && echo hello world! >$@",
 )
 
 genrule(
-  name = "eaten_sandwich_738682",
-  outs = ["eaten_sandwich_738682.txt"],
-  cmd_bash = "echo hello world && echo hello world! >$@"
+    name = "eaten_sandwich_738682",
+    outs = ["eaten_sandwich_738682.txt"],
+    cmd_bash = "echo hello world && echo hello world! >$@",
 )
 
 string = """
@@ -26,14 +26,15 @@ Two witnesses have came forward with relevant information.
 Their names are Amy and Mark. Both witnesses have been interviewed.
 
 """
+
 genrule(
-  name = "missing_basil_089324",
-  outs = ["missing_basil_123.txt"],
-  cmd_bash = "echo '" + string + "' && echo '" + string + "'>$@"
+    name = "missing_basil_089324",
+    outs = ["missing_basil_123.txt"],
+    cmd_bash = "echo '" + string + "' && echo '" + string + "'>$@",
 )
 
 genrule(
-  name = "lost_dog_847941",
-  outs = ["lost_dog_847941.txt"],
-  cmd_bash = "echo hello world && echo hello world! >$@"
+    name = "lost_dog_847941",
+    outs = ["lost_dog_847941.txt"],
+    cmd_bash = "echo hello world && echo hello world! >$@",
 )
