--- a/bazel-mystery/interviews/BUILD
+++ b/bazel-mystery/interviews/BUILD
@@ -4,13 +4,13 @@
 # For full license text, see the LICENSE file in the repo root or https://opensource.org/licenses/BSD-3-Clause
 
 sh_binary(
-  name = "454235",
-  srcs = ["454235.sh"],
-  deps = ["//people:amy"]
+    name = "454235",
+    srcs = ["454235.sh"],
+    deps = ["//people:amy"],
 )
 
 sh_binary(
-  name = "565673",
-  srcs = ["565673.sh"],
-  deps = ["//people:mark"]
+    name = "565673",
+    srcs = ["565673.sh"],
+    deps = ["//people:mark"],
 )
